syntax = "proto3";

package doctor;

service DoctorService {
  rpc FindOne (FindOneDto) returns (Doctor);
  rpc CreateDoctor (CreateDoctorDto) returns (Doctor);
  rpc FindAllDoctors (Empty) returns (DoctorList);
  rpc UpdateDoctor(UpdateDoctorDto) returns (Doctor);
  rpc DeleteDoctor(FindOneDto) returns (Doctor);
}


message UpdateDoctorDto {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message FindOneDto {
  int32 id = 1;
}

message CreateDoctorDto {
  string name = 1;
  string email = 2;
}

message Doctor {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message Empty {}

message DoctorList {
  repeated Doctor doctors = 1;
}
